--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-size: 16px;
+    font-size: 30px;
     padding: 8px 16px 0px 8px;
 }
 
@@ -28,6 +28,7 @@ a, a:hover, a:visited, a:active {
 
 h1 a {
 	    text-decoration: line-through;
+		We need to design what our koppen will look like.
 }
 
 p {
